created login page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,10 @@
 <h1>Welcome to COACH ME</h1>
 <P>{{title}}</P>
 
+
+<a href="/Login">Login</button>
+<a href="/Signup">Sign Up</a></button>
+
 <button>
 <a href="/style_coach">Go to check the style coaches!</a>
 </button>
