--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,8 +2,13 @@
 <P>{{title}}</P>
 
 
-<a href="/Login">Login</button>
-<a href="/Signup">Sign Up</a></button>
+<li id="to-right">
+    <a href="/signup">Signup</a> <span> | </span>
+    <a href="/login">Login</a> <span> | </span>
+    <form id="logout-form" action="/logout" method="POST">
+    <button>Logout</button>
+    </form>
+</li>
 
 <button>
 <a href="/style_coach">Go to check the style coaches!</a>
