--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -2,8 +2,8 @@
     <h2>Signup</h2>
     <form action="/signup" method="POST">
     <label>
-        Username
-        <input type="text" name="username" placeholder="Your username" />
+        Email
+        <input type="text" name="email" placeholder="Your useremail" />
     </label>
 
     <label>
