redirect newly created user

--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -6,7 +6,7 @@
         <a href="/user-profile">Reload the page</a>
     </button>
     <button>
-        <a href= "/main">Check it out! </a>
+        <a href= "/main">write a review 💡! </a>
     </button>
         <form id="logout-form" action="/logout" method="POST">
         <a href="/main"></a>
