reviews en cours

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,10 @@
 <P>{{title}}</P>
 
 
+<button>
+<a href="/book-session">Book a session!!</a>
+</button>
+
 <li id="to-right">
     <a href="/signup">Signup</a> <span> | </span>
     <a href="/login">Login</a> <span> | </span>
