--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -6,10 +6,9 @@
         <a href="/user-profile">Reload the page</a>
     </button>
     <button>
-        <a href= "/main">write a review 💡! </a>
+        <a href= "/create-reviews">write a review 💡! </a>
     </button>
         <form id="logout-form" action="/logout" method="POST">
-        <a href="/main"></a>
     <button>Logout</button>
 {{else}}
     <p>Still no logged in user, sorry!</p>
