--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -8,6 +8,9 @@
     <button>
         <a href= "/create-reviews">write a review 💡! </a>
     </button>
+    <button>
+        <a href= "/book-session">Book a session📒! </a>
+    </button>
         <form id="logout-form" action="/logout" method="POST">
     <button>Logout</button>
 {{else}}
