--- a/views/create-reviews.hbs
+++ b/views/create-reviews.hbs
@@ -1,1 +1,60 @@
 this is the review page! please leave your reviews!! 🐱
+
+
+<script src="https://use.fontawesome.com/a6f0361695.js"></script>
+
+    <h2>Write a review✏️  </h2>
+
+<form id="feedback" action="">
+    <div class="pinfo">Your personal info</div>
+
+<div class="form-group">
+    <div class="review-containter">
+        <div class="input-group">
+            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+    <input name="email" type="email" class="form-control" placeholder="john.doe@yahoo.com">
+    </div>
+    </div>
+    </div>
+
+
+<div class="pinfo">Date of courses</div>
+<div class="form-group">
+    <div class="review-containter">
+    <div class="input-group">
+    <span class="input-group-addon"><i class="fa fa-globe"></i></span>
+    <input  name="date" placeholder="date of courses" class="form-control"  type="date">
+    </div>
+    </div>
+</div>
+
+<div class="pinfo">Rate our overall classes.</div>
+
+    <div class="form-group">
+    <div class="review-containter">
+    <div class="input-group">
+    <span class="input-group-addon"><i class="fa fa-heart"></i></span>
+    <select class="form-control" id="rate">
+        <option value="1star">1</option>
+        <option value="2stars">2</option>
+        <option value="3stars">3</option>
+        <option value="4stars">4</option>
+        <option value="5stars">5</option>
+    </select>
+    </div>
+    </div>
+</div>
+
+    <div class="pinfo">Write your feedback.</div>
+
+<div class="form-group">
+    <div class="review-containter">
+    <div class="input-group">
+    <span class="input-group-addon"><i class="fa fa-pencil"></i></span>
+    <textarea class="form-control" id="review" rows="3"></textarea>
+    </div>
+    </div>
+</div>
+<button type="submit" class="btn btn-primary">Send a review ✏️</button>
+
+</form>
