--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -1,28 +1,38 @@
 Book a session! Start your class here!! 👻
-
+<form action="/book-session" method="POST">
     <h2>Filters</h2>
-    <label for="date">Date:</label>
-    <input id ="date" type="date"> 
+    {{!-- <label for="date">Date:</label>
+    <input id ="date" type="date">  --}}
 
-<label for="category">Category:</label>
-<select name="courses" id="courses">
-    <option value="life-coach">Life coach</option>
-    <option value="Style-coach">Style coach</option>
-    <option value="Career-coach">Career coach</option>
-    <option value="Sport-Coach">Sport coach</option>
-</select>
+    <label for="category">Category:</label>
+    <select name="category" id="courses">
+        <option value="life">Life coach</option>
+        <option value="style">Style coach</option>
+        <option value="career">Career coach</option>
+        <option value="sport">Sport coach</option>
+    </select>
 
-<label for="location">Location:</label>
-<select name="locations" id="locations">
-    <option value="Paris">Paris</option>
-    <option value="Nantes">Nantes</option>
-    <option value="Lyon">Lyon</option>
-    <option value="Lyon">Nice</option>
-    <option value="Bordeaux">Bordeaux</option>
-    <option value="Lille">Lille</option>
-    <option value="Marseille">Marseille</option>
-</select>
+    <label for="location">Location:</label>
+    <select name="location" id="locations">
+        <option value="Paris">Paris</option>
+        <option value="Nantes">Nantes</option>
+        <option value="Lyon">Lyon</option>
+        <option value="Lyon">Nice</option>
+        <option value="Bordeaux">Bordeaux</option>
+        <option value="Lille">Lille</option>
+        <option value="Marseille">Marseille</option>
+    </select>
 
-<label for="time">time:</label>
-<input type="time" id="time" name="time" min="09:00" max="18:00" required>
-<button id ="get-date-result" > Search</button>
+    {{!-- <label for="time">time:</label>
+    <input type="time" id="time" name="time" min="09:00" max="18:00" required> --}}
+    <button> Search</button>
+
+</form>
+
+<div>
+    {{#each courses}}
+    <p>Category : {{category}}</p>
+    <p>Location : {{location}}</p>
+    <p>Coach : {{coach.name}}</p>
+    {{/each}}
+</div>
