user reviewed update

--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -32,6 +32,10 @@ Book a session! Start your class here!! 👻
     <p>Location : {{location}}</p>
     <p>Time : {{time}}</p>
     <p>coach :{{coach.name}}</p>
+
+    <button>
+<a href="/booked">Book a session!!</a>
+</button>
     <hr>
     {{/each}}
 </div>
