--- a/views/create-reviews.hbs
+++ b/views/create-reviews.hbs
@@ -44,6 +44,8 @@
         <p>{{this.location}}</p>
         <p>{{this.text}}</p>
         <p>{{this.coach.name}}</p>
+        <p>{{this.user.email}}</p>
+
 
     {{/each}}
 
