id and user in process

--- a/views/create-reviews.hbs
+++ b/views/create-reviews.hbs
@@ -40,11 +40,11 @@
 
 <ul>
     {{#each reviews}}
-        <p>{{this.category}}</p>
-        <p>{{this.location}}</p>
-        <p>{{this.text}}</p>
-        <p>{{this.coach.name}}</p>
-        <p>{{this.user.email}}</p>
+        <p>Category:{{this.category}}</p>
+        <p>Place:{{this.location}}</p>
+        <p>Reviews: {{this.text}}</p>
+        <p>Coach name:{{this.coach.name}}</p>
+        <p>Username:{{this.user.email}}</p>
 
 
     {{/each}}
