--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -12,7 +12,9 @@
     </label>
 
     <button>Create account</button>
-
-    {{!-- error message will be added here --}}
     </form>
+
+    {{#if errorMessage}}
+    <p>{{errorMessage}}</p>
+    {{/if}}
 </div>
