--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body{
   display: flex;
   flex-direction: column;
-  margin: 0;
+  margin: 0px;
   height: 100vh;
 }
 
@@ -22,18 +22,17 @@ nav{
   height: 60px;
 }
 
-.promo{
+div{
   display: flex;
-  background-color: chartreuse;
   margin:auto;
   align-items: center;
-  position: relative;
   flex-direction: column;
+  margin: 0px;
 }
 
 .img{
-  width: 0px;
-  height: 500px;
+  width: 1200px;
+  height: 400px;
 }
 
 
