user-created css done and finished structure

--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -1,3 +1,6 @@
+<link rel = "stylesheet" href= "/stylesheets/book-sessions_style.css"/>
+
+
 Book a session! Start your class here!! 👻
 <form action="/book-session" method="POST">
     <h2>Filters</h2>
