--- a/views/user-created.hbs
+++ b/views/user-created.hbs
@@ -1,5 +1,16 @@
-User is created! 💙
+<link rel = "stylesheet" href= "/stylesheets/user_created_style.css"/>
 
-<button>
+<div class = "user-created-container">
+<h1>Welcome sunshine!</h1>
+<h2>User has created! </h2>
+<img class= "new-user" src= "/images/care.png">
+
+</div>
+<div class = "user-btn-container">
+<button class= "user-created">
 <a href="/">Go to login! </a>
 </button>
+</div>
+
+
+
