--- a/public/stylesheets/user_created_style.css
+++ b/public/stylesheets/user_created_style.css
@@ -1,6 +1,7 @@
 /*User-created */
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap');
 
+/*basic css structure*/
 body{
     background-color: #FFF6DA;
 }
@@ -18,6 +19,21 @@ h2{
     color: #042F4B;
     margin: 10px 20px;
 }
+
+
+
+/*img*/
+.book-class{
+    width: unset;
+    height:30px;
+    position: 0, 0;
+    background-repeat: no-repeat;
+        padding-top: 5%;
+    position: relative
+    
+}
+
+
 
 .new-user{
     width: 20%;
@@ -50,9 +66,7 @@ h2{
     font-family: 'Montserrat', sans-serif;
 }
 
-a:link { 
-    text-decoration: none; 
-}
+
 
 
 
