--- a/views/user-created.hbs
+++ b/views/user-created.hbs
@@ -7,7 +7,7 @@
 
 </div>
 <div class = "user-btn-container">
-<button class= "user-created">
+<button class= "user-created-btn">
 <a href="/">Go to login! </a>
 </button>
 </div>
