--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap');
-
-
 body {
-  font-family: 'Montserrat', sans-serif;
-  padding:0;
-  margin:0;
+  padding: 0px;
+  margin:0px;
 }
 
-
 a {
-  color: white; }
+  color:white; 
+}
 
+  
 /*# sourceMappingURL=style.css.map */
