--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,5 @@
-body {
-  padding: 0px;
-  margin:0px;
+body{
+    margin:0;
+    padding:0;
 }
-
-a {
-  color:white; 
-}
-
-  
 /*# sourceMappingURL=style.css.map */
