--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -1,5 +1,29 @@
 <link rel = "stylesheet" href= "/stylesheets/book_sessions.css">
 
+ <header>
+        <div>
+          <div>
+            <img class="logo" src="images/logo.svg" alt="black heart" />
+          </div>
+                <span> My Coach </span>
+
+
+          <nav class="nav-bar">
+            <ul class="nav-bar-ul">
+              <li><a href="#"> coaches </a></li>
+              <li><a href="#"> reviews </a></li>
+              <li><a href="/signup"> signup </a></li>
+              <li> <a href="/login">Login</a></li>
+              <li> <form id="logout-form" action="/logout" method="POST">
+    <a href="/logout">Logout</a>
+    </form></li>
+            </ul>
+          
+          </nav>
+        </div>
+    
+        </header>
+
 <div class = "book-container">
 <img class = "book-class" src= "images/class.jpg" alt= "book-class-image">
 <div class = "h1-book">
@@ -8,7 +32,6 @@
 </div>
 
 <div class = "body-container">
-
     <div class= "search-container">
 <form action="/book-session" method="POST">
 <h1>Find your best coaches!</h1>
