--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -1,6 +1,6 @@
 <link rel = "stylesheet" href= "/stylesheets/book_sessions.css">
 
- <header>
+<header>
         <div>
           <div>
             <img class="logo" src="images/logo.svg" alt="black heart" />
@@ -26,9 +26,7 @@
 
 <div class = "book-container">
 <img class = "book-class" src= "images/class.jpg" alt= "book-class-image">
-<div class = "h1-book">
-<h1 class = "top-letter">Book your session</h1>
-</div>
+<h1 class = "top-letter">Book your session! </h1>
 </div>
 
 <div class = "body-container">
