--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,12 +1,14 @@
 body {
   padding: 0;
-  margin:0;
+  font-family: 'Montserrat', sans-serif;
+  color: #042F4B;
+  margin: 0; 
 }
 
 a {
-  color:white;
+  color: white; 
 }
 
 a:link {
-  text-decoration: none; 
+  text-decoration: none;
 }
