--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -1,25 +1,27 @@
 <link rel = "stylesheet" href= "/stylesheets/book_sessions.css">
 
+
+<!--Nav bar -->
 <header>
         <div>
-          <div>
+        <div>
             <img class="logo" src="images/logo.svg" alt="black heart" />
-          </div>
+        </div>
                 <span> My Coach </span>
 
 
-          <nav class="nav-bar">
+        <nav class="nav-bar">
             <ul class="nav-bar-ul">
-              <li><a href="#"> coaches </a></li>
-              <li><a href="#"> reviews </a></li>
-              <li><a href="/signup"> signup </a></li>
-              <li> <a href="/login">Login</a></li>
-              <li> <form id="logout-form" action="/logout" method="POST">
+            <li><a href="#"> coaches </a></li>
+            <li><a href="#"> reviews </a></li>
+            <li><a href="/signup"> signup </a></li>
+            <li> <a href="/login">Login</a></li>
+            <li> <form id="logout-form" action="/logout" method="POST">
     <a href="/logout">Logout</a>
     </form></li>
-            </ul>
-          
-          </nav>
+        </ul>
+        
+        </nav>
         </div>
     
         </header>
