--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,15 +1,54 @@
+<link rel="stylesheet" href="/stylesheets/login.css" />
+
+<header>
+  <div>
+    <div>
+      <img class="logo" src="images/logo.svg" alt="black heart" />
+    </div>
+    <span> My Coach </span>
+
+    <nav class="nav-bar">
+      <ul class="nav-bar-ul">
+        <li><a href="#"> coaches </a></li>
+        <li><a href="#"> reviews </a></li>
+        <li><a href="/signup"> signup </a></li>
+        <li> <a href="/login">Login</a></li>
+        <li>
+          <form id="logout-form" action="/logout" method="POST">
+            <a href="/logout">Logout</a>
+          </form></li>
+      </ul>
+
+    </nav>
+  </div>
+</header>
+
+<!---->
 <div id="form">
-    <h2>Login 😃</h2>
+  <div class="container">
+    <div class="brand-logo"></div>
+    <h2>Login</h2>
     <form action="/login" method="POST">
-    <label for="input-email">Email</label>
-    <input type="text" id="input-email" name="email" placeholder="Your email" />
-    
-    <label for="input-password">Password</label>
-    <input type="password" name="password" id="input-password" placeholder="********" />
-    <button type="submit">Login</button>
-    
-    {{#if errorMessage}}
-    <p class="error">{{errorMessage}}</p>
-    {{/if}}
+      <label class="labels" for="input-email">Email</label>
+      <input
+        type="text"
+        id="input-email"
+        name="email"
+        placeholder="example@test.com"
+      />
+
+      <label class="labels" for="input-password">Password</label>
+      <input
+        type="password"
+        name="password"
+        id="input-password"
+        placeholder="********"
+      />
+      <button class="submit-btn" type="submit">Login</button>
+
+      {{#if errorMessage}}
+        <p class="error">{{errorMessage}}</p>
+      {{/if}}
     </form>
+  </div>
 </div>
