--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -5,7 +5,7 @@
 <header>
         <div>
         <div>
-            <img class="logo" src="images/logo.svg" alt="black heart" />
+            <img class="logo" src="images/logo.svg" alt="logo" />
         </div>
                 <span> My Coach </span>
 
