--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,15 +3,15 @@
 <header>
   <div>
     <div>
-      <img class="logo" src="images/logo.svg" alt="black heart" />
+      <img class="logo" src="images/logo.svg" alt="logo" />
     </div>
     <span> My Coach </span>
 
     <nav class="nav-bar">
       <ul class="nav-bar-ul">
-        <li><a href="#"> coaches </a></li>
-        <li><a href="#"> reviews </a></li>
-        <li><a href="/signup"> signup </a></li>
+        <li><a href="#"> Coaches </a></li>
+        <li><a href="#"> Reviews </a></li>
+        <li><a href="/signup"> Signup </a></li>
         <li> <a href="/login">Login</a></li>
         <li>
           <form id="logout-form" action="/logout" method="POST">
