--- a/views/booked.hbs
+++ b/views/booked.hbs
@@ -1,2 +1,38 @@
-Your courses have been booked!! 📕
-We will send you the details soon 😸
+<link rel="stylesheet" href="/stylesheets/booked.css" />
+
+<header>
+  <div>
+    <div>
+      <img class="logo" src="images/logo.svg" alt="logo" />
+    </div>
+    <span> My Coach </span>
+
+    <nav class="nav-bar">
+      <ul class="nav-bar-ul">
+        <li><a href="#"> Coaches </a></li>
+        <li><a href="#"> Reviews </a></li>
+        <li><a href="/signup"> Signup </a></li>
+        <li> <a href="/login">Login</a></li>
+        <li>
+          <form id="logout-form" action="/logout" method="POST">
+            <a href="/logout">Logout</a>
+          </form></li>
+      </ul>
+
+    </nav>
+  </div>
+</header>
+
+<body>
+  <div class="booked-container">
+    <h1>Yoohoo!</h1>
+    <h2>Your courses have been booked!</h2>
+    <img class="new-booked" src="/images/favorite.png" alt="booked" />
+  </div>
+
+  <div class="btn-container">
+    <button class="booked-btn">
+      <a href="/">Want to discover more ? </a>
+    </button>
+  </div>
+</body>
