--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -10,11 +10,11 @@ body{
 /**/
 /*NAV*/
 /**/
-  
+
   nav{
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content:center;
     background-color: #042F4B;
     font-family: "Montserrat", sans-serif;
     font-size: 30px;
@@ -22,30 +22,33 @@ body{
     text-align: center;
     align-items: center;
     margin: 0px;
+    border-bottom: 1px solid lightgray;
   }
 
   .navh1{
-    font-family:"Sacramento", cursive;
+    font-family: "Montserrat", sans-serif;
     color: white;
-    font-size: 100px;
+    font-size: 30px;
+    text-align: center;
 }
   
   .imgnav{
-    width: 180px;
-    height: 180px;
+    width: 30px;
     border-radius: 100px;
     align-items: center;
     margin-left: 30px;
   }
 
-  li{
+  nav > ul{
+    list-style: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
   }
   
-  a {
-    color: #00B7FF; 
+  a{
+    display: flex;
+    justify-content: center;
     text-decoration: none;
     color: white;
   }
@@ -53,6 +56,7 @@ body{
   #nava{
     margin-right: 20px;
   }
+
 
 /**/
 /*CENTRAL DIV*/
@@ -67,10 +71,14 @@ body{
     margin:0px;
     padding-top: 500px;
     padding-bottom: 500px;
+    border-bottom: 10px solid #042F4B;
     }
 
+
+    
+
 .b{
-    font-size: 20px;
+    /*font-size: 20px;
     text-align: center;
     width: 200px;
     height: 100px;
@@ -81,8 +89,28 @@ body{
     font-weight: bold;
     text-align: center;
     margin: 0px;
-    box-shadow: 0 2px 25px;
+    box-shadow: 0 2px 25px;*/
+
+  border: 5em;
+  cursor: pointer;
+  outline: none;
+  font-size: 20px;
+  font-family: "Montserrat", sans-serif;
+  -webkit-transform: translate(0);
+  transform: translate(0);
+  background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+  padding: 0.7em 2em;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+  -webkit-transition: box-shadow 0.25s;
+  transition: box-shadow 0.25s;
+  color: white;
+
+
+
+
 }
+
 
 div > article > button{
     background-color: #042F4B;
@@ -101,7 +129,10 @@ section{
     margin-top: 30px;
     margin-bottom: 30px;
     display: flex;
-    flex-direction:column
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 div{
@@ -109,37 +140,64 @@ div{
     margin:auto;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
   }
 
   #coachdiv{
+      display: flex;
       flex-direction: row;
-      background-color: #FBC99D;
-      border-radius: 8px;
-      width: 50%;
-      margin-bottom: 10px;
+      justify-content: space-evenly;
+      border-radius: 100px;
+      box-shadow: 10px 5px 5px grey;
       font-family: "Montserrat", sans-serif;
-      margin-left: 0px;
+      width: 1200px;
+      margin-top: 50px;
+      margin-bottom: 50px;
   }
 
 section>div>img{
     width: 500px;
     height: 300px;
+    border-radius: 200px;
+    border: 10px solid #042F4B;
+    align-items: center;
 }
 
 article > h1{
     text-align: center;
+    text-transform: uppercase;
+    font-family: "Montserrat", sans-serif;
+    color:#042F4B;
+    font-size: 30px;
 }
 
 article{
-    width: 80%;
     text-align: center;
     align-items: center;
+    width: 500px;
 }
 
+.zoom div {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.zoom div:hover  {
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
+}
+
+
+/*
+/*FOOTER
+*/
+
 footer{
-    background-color: #ED1250;
+    background-color: #042F4B;
     display: flex;
     justify-content: center;
+    flex-direction: row;
     font-family: "Montserrat", sans-serif;
     font-size: 30px;
     font-weight: bold;
@@ -147,9 +205,14 @@ footer{
     padding-top: 10px;
 }
 
-footer > li > a{
+footer > ul{
+    display: flex;
     margin-right: 50px;
+    list-style: none;
+    flex-direction: row; 
+    justify-content: space-evenly;   
 }
+
 
 
   
