--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -12,9 +12,9 @@
 
         <nav class="nav-bar">
             <ul class="nav-bar-ul">
-            <li><a href="#"> coaches </a></li>
-            <li><a href="#"> reviews </a></li>
-            <li><a href="/signup"> signup </a></li>
+            <li><a href="#"> Coaches </a></li>
+            <li><a href="#"> Reviews </a></li>
+            <li><a href="/signup"> Signup </a></li>
             <li> <a href="/login">Login</a></li>
             <li> <form id="logout-form" action="/logout" method="POST">
     <a href="/logout">Logout</a>
