--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -34,7 +34,7 @@
         type="text"
         id="input-email"
         name="email"
-        placeholder="example@test.com"
+        placeholder="example@mycoach.com"
       />
 
       <label class="labels" for="input-password">Password</label>
