user-profile half done

--- a/views/book-session.hbs
+++ b/views/book-session.hbs
@@ -1,13 +1,12 @@
 <link rel = "stylesheet" href= "/stylesheets/book_sessions.css">
 
-
 <!--Nav bar -->
 <header>
         <div>
         <div>
             <img class="logo" src="images/logo.svg" alt="logo" />
         </div>
-                <span> My Coach </span>
+            <a href="/"><span>My coach</span></a>
 
 
         <nav class="nav-bar">
@@ -16,14 +15,11 @@
             <li><a href="#"> Reviews </a></li>
             <li><a href="/signup"> Signup </a></li>
             <li> <a href="/login">Login</a></li>
-            <li> <form id="logout-form" action="/logout" method="POST">
-    <a href="/logout">Logout</a>
+
     </form></li>
         </ul>
-        
         </nav>
         </div>
-    
         </header>
 
 <div class = "book-container">
