--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,7 +5,7 @@
     <div>
       <img class="logo" src="images/logo.svg" alt="logo" />
     </div>
-    <span> My Coach </span>
+    <a href="/"><span>My coach</span></a>
 
     <nav class="nav-bar">
       <ul class="nav-bar-ul">
@@ -13,10 +13,6 @@
         <li><a href="#"> Reviews </a></li>
         <li><a href="/signup"> Signup </a></li>
         <li> <a href="/login">Login</a></li>
-        <li>
-          <form id="logout-form" action="/logout" method="POST">
-            <a href="/logout">Logout</a>
-          </form></li>
       </ul>
 
     </nav>
