--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -5,7 +5,7 @@
     <div>
       <img class="logo" src="images/logo.svg" alt="logo" />
     </div>
-    <span> My Coach </span>
+            <a href="/"><span>My coach</span></a>
 
     <nav class="nav-bar">
       <ul class="nav-bar-ul">
@@ -13,10 +13,6 @@
         <li><a href="#"> Reviews </a></li>
         <li><a href="/signup"> Signup </a></li>
         <li> <a href="/login">Login</a></li>
-        <li>
-          <form id="logout-form" action="/logout" method="POST">
-            <a href="/logout">Logout</a>
-          </form></li>
       </ul>
 
     </nav>
@@ -47,7 +43,7 @@
       <button class="submit-btn" type="submit">Sign up</button>
 
       {{#if errorMessage}}
-        <p> class="error">{{errorMessage}}</p>
+        <p> <class="error">{{errorMessage}}</p>
       {{/if}}
     </form>
   </div>
