--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <nav>
 <link rel="stylesheet" href="/stylesheets/homepage.css" />
-<img class="imgnav" src="/public/images/logo.svg">
+<img class="imgnav" src="/public/images/logo (1).svg">
 <h1 class="navh1">My Coach</h1>
 <ul id="to-right">
     <li><a id="nava" href="#coach">coaches</a></li>
