Style coach page nearly done and other pages in progress

--- a/views/coaches/life_coach.hbs
+++ b/views/coaches/life_coach.hbs
@@ -1,1 +1,76 @@
-<h2> This is the life coach page!!!!!🍎 </h2>
+<link rel="stylesheet" href="/stylesheets/life_coach.css" />
+<header>
+        <div>
+          <div>
+            <img class="logo" src="/public/images/logo (1).svg"/>
+          </div>
+                <span>My Coach</span>
+
+
+          <nav class="nav-bar">
+            <ul class="nav-bar-ul">
+              <li><a href="/"> coaches </a></li>
+              <li><a href="/create-reviews"> reviews </a></li>
+              <li><a href="/signup"> signup </a></li>
+              <li> <a href="/login">Login</a></li>
+            </ul>
+          
+          </nav>
+        </div>
+</header>
+
+<section>
+  <div>
+    <h1>Stylist Coach</h1>
+    <h2>Description:</h2>
+    <p>
+      "A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget"
+    </p>
+    <h2>Services:</h2>
+    <ul>
+      <li>Personal shopping</li>
+      <li>Relooking</li>
+      <li>Closet edit</li>
+      <li>Beauty Tips</li>
+    </ul>
+     <button>
+      <a href="/create-reviews">Add a review</a>
+    </button>
+    <button>
+      <a href="/create-reviews">Look review</a>
+    </button>
+  </div>
+  <div>
+    <img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGVyc29uYWwlMjBzaG9wcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+  </div>
+</section>
+
+
+
+<section>
+<div>
+  <img src="https://images.unsplash.com/photo-1595475716260-0f2c35f5a40f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fHN0eWxpc3R8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60">
+</div>
+<div>
+    <h1>Gloria</h1>
+    <p>
+      "I have been a Style Coach for the last 10 years and graduated from ESMOD Paris. I started my career as stylist for BALMAIN and attended several fashion weeks. After an interesting career in fashion, I wanted a new challenge: Helping people feeling better in their daily outfit"
+    </p>
+    <h2>Free tip:</h2>
+    <p class="coachp">
+      "Wearing high-waisted clothes will improve your figure !"
+    </p>
+     <button>
+      <a href="/book-session">Book a session</a>
+    </button>
+  </div>
+</section>
+
+<footer>
+<ul>
+    <li><a href="#coach">coaches</a></li>
+    <li><a href="/create-reviews">reviews</a></li>
+    <li><a href="/signup">signup</a></li>
+    <li><a href="/login">login</a></li> 
+</ul>
+</footer>
