--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,17 +1,24 @@
-<nav>
 <link rel="stylesheet" href="/stylesheets/homepage.css" />
-<img class="imgnav" src="/public/images/logo (1).svg">
-<h1 class="navh1">My Coach</h1>
-<ul id="to-right">
-    <li><a id="nava" href="#coach">coaches</a></li>
-    <li><a id="nava" href="/create-reviews">reviews</a></li>
-    <li><a id="nava" href="/signup">signup</a></li>
-    <li><a id="nava" href="/login">login</a></li> 
-    <form id="logout-form" action="/logout" method="POST">
-    <li><a id="nava" href="/logout">logout</a></li>
-    </form>
-</ul>
-</nav> 
+
+<header>
+        <div>
+          <div>
+            <img class="logo" src="/public/images/logo (1).svg"/>
+          </div>
+                <span> My Coach </span>
+
+
+          <nav class="nav-bar">
+            <ul class="nav-bar-ul">
+              <li><a href="#coach"> coaches </a></li>
+              <li><a href="/create-reviews"> reviews </a></li>
+              <li><a href="/signup"> signup </a></li>
+              <li> <a href="/login">Login</a></li>
+            </ul>
+          </nav>
+        </div>
+    
+        </header>
 
 <div  class="centralimg">
     <button class="b">
@@ -65,13 +72,12 @@
     </div>
 </section>
 <footer>
-    <ul id="to-right">
-    <li><a id="nava" href="#coach">coaches</a></li>
-    <li><a id="nava" href="/create-reviews">reviews</a></li>
-    <li><a id="nava" href="/signup">signup</a></li>
-    <li><a id="nava" href="/login">login</a></li> 
-    <form id="logout-form" action="/logout" method="POST">
-    <li><a id="nava" href="/logout">logout</a></li>
-    </form>
+<ul>
+    <li><a href="#coach">coaches</a></li>
+    <li><a href="/create-reviews">reviews</a></li>
+    <li><a href="/signup">signup</a></li>
+    <li><a href="/login">login</a></li> 
 </ul>
 </footer>
+
+
