--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -11,51 +11,50 @@ body{
 /*NAV*/
 /**/
 
-  nav{
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    background-color: #042F4B;
-    font-family: "Montserrat", sans-serif;
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    align-items: center;
-    margin: 0px;
-    border-bottom: 1px solid lightgray;
-  }
 
-  .navh1{
-    font-family: "Montserrat", sans-serif;
-    color: white;
-    font-size: 30px;
-    text-align: center;
+header > div {
+  background-color:#042F4B;
+  padding: 0 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  border-bottom: 1px solid lightgray;
+}
+
+header > div > div{
+  margin: 0px;
 }
   
-  .imgnav{
-    width: 50px;
-    border-radius: 100px;
-    align-items: center;
-    margin-left: 30px;
+  span{
+    display: inline-block;
+    font-size:20px;
+    color: white;
   }
 
-  nav > ul{
+  nav {
+    width: 600px;
+  }
+  
+  nav ul {
     list-style: none;
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
     align-items: center;
   }
   
-  a{
-    display: flex;
-    justify-content: space-evenly;
+  nav a {
     text-decoration: none;
-    color: white;
+    color:white;
   }
-
-  #nava{
-    margin-right: 20px;
+  
+  .logo {
+    padding:20px;
+    width: 30px;
   }
 
 
@@ -82,21 +81,6 @@ body{
   border-radius: 20px;
   box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
   margin: 0px;
-  /*border: 5em;
-  cursor: pointer;
-  outline: none;
-  font-size: 20px;
-  font-family: "Montserrat", sans-serif;
-  -webkit-transform: translate(0);
-  transform: translate(0);
-  background-image: linear-gradient(45deg, #4568dc, #b06ab3);
-  padding: 0.7em 2em;
-  border-radius: 5px;
-  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
-  -webkit-transition: box-shadow 0.25s;
-  transition: box-shadow 0.25s;
-  color: white;
-  */
 }
 
 div > button > a{
@@ -115,6 +99,10 @@ div > article > button{
     font-weight: bold;
     text-align: center;
     margin: 0px;
+}
+
+div > article > button > a{
+  color: white;
 }
 
 /**/
@@ -193,25 +181,27 @@ footer{
     background-color: #042F4B;
     display: flex;
     justify-content: center;
-    flex-direction: row;
     font-family: "Montserrat", sans-serif;
-    font-size: 30px;
     font-weight: bold;
-    padding-bottom: 10px;
-    padding-top: 10px;
 }
 
 footer > ul{
-    display: flex;
-    margin-right: 50px;
-    list-style: none;
-    flex-direction: row; 
-    justify-content: space-evenly;   
+  display: flex;
+  padding:0px;
+  list-style: none;
+  justify-content: space-between;
 }
 
+footer > ul > li{
+  margin-right: 20px;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+} 
 
 
-  
   
   
  
